--- a/_posts/2021-07-15-retainer.md
+++ b/_posts/2021-07-15-retainer.md
@@ -41,7 +41,7 @@ Para usar nuestro asistente tendremos que utilizar una <a href="https://na.final
   </div>
 </div>
 
-#### Asignar una profesión a tu asistente
+### Asignar una profesión a tu asistente
 
 Primero tenemos que completar la misión <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/3b19b24585a/" target="_blank" class="eorzeadb_link">An Ill-conceived Venture</a> que nos la dara ***Troubled Adventurer*** :
 
@@ -63,56 +63,56 @@ Cuando el asistente llegue a nivel 30, podrá elegir una profesión, pero esto t
 <b>Una Venture es una moneda que se consigue dentro del juego mediante 200 Sellos de la Gran Compañía. También se pueden conseguir a través de misiones de las Tribus Bestias o completando Guildleves.</b>
 </blockquote>
 
-#### Cambiando el equipo de tu asistente
+### Cambiando el equipo de tu asistente
 
 Tras hablar con tu asistente puedes elegir la la opción ***View retainer attributes and gear.*** podrás ponerle equipo que tengas en tu inventario o cofre de equipo y que se ajuste a su nivel y clase o profesión.
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/equipo.jpg" alt="equipo">
 <sub><sup>Equipo del Asistente.</sup></sub></p>
 
-#### Mandarlo de Misiones a nuestro asistente
+### Mandarlo de Misiones a nuestro asistente
 
-Cuando nuestro asistente tiene una clase o profesión y el equipo requerido, estará preparado para mandarlo de misiones, las cuales nos pediran **2 Ventures** cada ves que les enviemos esto lo haremos tras elegir la opción ***Assign venture*** y serán distintas dependiendo la profesión que hayas elegido para tu asistente.
+Cuando nuestro asistente tiene una clase o profesión y el equipo requerido, estará preparado para mandarlo de misiones, las cuales nos pedirán **2 Ventures** cada ves que les enviemos esto lo haremos tras elegir la opción ***Assign venture*** y serán distintas dependiendo la profesión que hayas elegido para tu asistente.
 
 Existen 3 tipos de misiones : 
 
-- Exploraciones, duran 18 horas y proporcionan mucha experiencia, las usaremos para subir de nivel a nuestros asistentes. Estas misiones a ciertos niveles tiene probabilidad de proporcionar ademas objetos especiales como mascotas de acompañamiento.
-  - ***Field Exploration* - Disciplinas de la guerra o de la magia**: **Piezas de plata o Bronze** y objetos aleatorios.
-  - ***Highland Exploration* - *Minero***: **Piezas de plata o Bronze** y objetos aleatorios de minería.
-  - ***Woodland Exploration* - *Botanista***: **Piezas de plata o Bronze** y objetos aleatorios de de botanismo.
-  - ***Waterside Exploration* - *Pescador***: **Piezas de plata o Bronze**  y objetos aleatorios de pesca.
-- Exploraciones rápidas, duran 1 hora y proporcionan poca experiencia pero traen objetos aleatorios que son mas raros cuanto mas nivel de equipo tiene nuestro asistente:
-  - ***Quick Exploration***: Traerán un objeto aleatorio, se desbloquean a nivel 10. 
-- Misiones de campo, duran 1 hora y nos traerán un material en concreto según el tipo que elijamos, limitado a la clase o profesión de nuestro asistente: 
-* ***Hunting*- Disciplinas de la guerra o de la magia**: Te traerán objetos que se obtienen de enemigos.
-* ***Mining***: Traerán objetos de minería.
-* ***Botany***: Traerán objetos de botanismo.
-* ***Fishing***: Traerán objetos de pesca.
+- **Exploraciones** duran 18 horas y proporcionan mucha experiencia, las usaremos para subir de nivel a nuestros asistentes. Estas misiones a ciertos niveles tiene probabilidad de proporcionar ademas objetos especiales como mascotas de acompañamiento.
+  - *Field Exploration* - Disciplinas de la guerra o de la magia: **Piezas de plata o Bronze** y objetos aleatorios.
+  - *Highland Exploration* - *Minero*: **Piezas de plata o Bronce** y objetos aleatorios de minería.
+  - *Woodland Exploration* - *Botánico*: **Piezas de plata o Bronce** y objetos botánicos aleatorios.
+  - *Waterside Exploration* - *Pescador*: **Piezas de plata o Bronce**  y objetos aleatorios de pesca.
+- **Exploraciones rápidas** duran 1 hora y proporcionan poca experiencia pero traen objetos aleatorios que son mas raros cuanto mas nivel de equipo tiene nuestro asistente:
+  - *Quick Exploration*: Traerán un objeto aleatorio, se desbloquean a nivel 10. 
+- **Misiones de campo** duran 1 hora y nos traerán un material en concreto según el tipo que elijamos, limitado a la clase o profesión de nuestro asistente: 
+  - *Hunting* - Disciplinas de la guerra o de la magia**: Te traerán objetos que se obtienen de enemigos.
+  - *Mining*: Traerán objetos de minería.
+  - *Botany*: Traerán objetos de botánico.
+  - *Fishing*: Traerán objetos de pesca.
 
 ### Guardar objetos en el Asistente
 
-Cada ***Retainer*** tiene unas bolsas donde podrás guardar equipo. Con la opción ***Entrust or withdraw items*** se te abrirán sus bolsas y podrás guardar allí lo que tú quieras hasta un máximo de 175 objetos.
+Cada asistente tiene unas bolsas donde podrás guardar equipo. Con la opción ***Entrust or withdraw items*** se te abrirán sus bolsas y podrás guardar allí lo que tú quieras hasta un máximo de 175 objetos.
 
 <div class="container">
   <div class="row">
     <div class="col-xl">
       <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/menu.jpg" alt="menu">
       <br/>
-      <sub><sup>Menú del Retainer.</sup></sub></p>
+      <sub><sup>Menú del Asistente.</sup></sub></p>
     </div>
     <div class="col-xl">
       <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/175.jpg" alt="objetos">
       <br/>
-      <sub><sup>Bolsas del Retainer.</sup></sub></p>
+      <sub><sup>Bolsas del Asistente.</sup></sub></p>
     </div>
   </div>
 </div>
 
-### Como vender objetos en el *Market Board* (Tablón del Mercado) utilizando tu As
+### Como vender objetos en el *Market Board* (Tablón del Mercado) utilizando tu Asistente
 
-Con nuestro *Retainer* podrás poner objetos para venderlos en el ***Market Board***. Podrás elegir tanto los objetos que tengas en tu inventario, con la opción ***Sell items in your inventory on the market***, o los objetos que tengas guardados en el inventario del *Retainer*, con la opción ***Sell items in your retainer's inventory on the market***.
+Para vender objetos en el ***Market Board*** podrás elegir ***Sell items in your inventory on the market*** para vender los objetos en tu inventario o ***Sell items in your retainer's inventory on the market*** para venderlos desde el inventario de tu asistente..
 
-Cada *Retainer* puede poner hasta 20 objetos a la venta. Cuando elijas el objeto a vender y hagas click derecho tendrás que elegir la opción ***Put up for sale***. Se nos abrirá una ventana en la que podremos ajustar el precio por la que queremos vender el objeto así como la cantidad de objetos que queremos vender (el precio en *Asking Price* siempre será por objeto). Con el botón ***Compare Prices*** podrás comprobar por cuanto se vende este objeto en el ***Market Board*** de tu Servidor.
+Cada asistente puede poner hasta **20 objetos** a la venta. Cuando elijas el objeto a vender y hagas click derecho tendrás que elegir la opción ***Put up for sale***. Podrás elegir la cantidad de objetos del montón que pones a la venta y el precio individual de cada uno. Con el botón ***Compare Prices*** podrás comprobar por cuanto se vende este objeto.
 
 <div class="container">
   <div class="row">
@@ -131,4 +131,52 @@ Cada *Retainer* puede poner hasta 20 objetos a la venta. Cuando elijas el objeto
 
 Podrás controlar el precio de los artículos cuando tu quieras volviendo a pulsar sobre *Compare prices* y así cambiar el precio para ajustar al mercado. Una vez vendas el artículo, se te cobrará **tarifa** (aclaro que no se te cobrará al poner el artículo, sino una vez lo vendas).
 
-El dinero que consigas vendiendo cosas con tu *Retainer* lo podrás ver al elegir la opción del menú ***Entrust or withdraw gil***. Así cada jugador puede elegir si dejar el dinero en el *Retainer* o cogerlo para su personaje.
+El dinero que consigas vendiendo cosas con tu asistente lo podrás ver al elegir la opción del menú ***Entrust or withdraw gil***. Así cada jugador puede elegir si dejar el dinero en el asistente o cogerlo para su personaje.
+
+### Asignar una profesión a tu asistente
+
+Primero tenemos que completar la misión <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/quest/3b19b24585a/" target="_blank" class="eorzeadb_link">An Ill-conceived Venture</a> que nos la dara ***Troubled Adventurer*** :
+
+- <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/7a4cc0252df/" target="_blank" class="eorzeadb_link">Ul'dah - Steps of Nald (X: 9.3 Y: 8.7)</a>.
+- <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/0e1ad807308/" target="_blank" class="eorzeadb_link">New Gridania (X: 11.8 Y: 12.2)</a>.
+- <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/a88bb7dd143/" target="_blank" class="eorzeadb_link">Limsa Lominsa Lower Decks (X: 9.0 Y: 11.2)</a>.
+
+A continuación al hablar con nuestro asistente podemos usar la opción, ***Assign retainer class*** (Asignar una clase a nuestro asistente). Las clases disponibles serán solo las que tienes desbloqueadas, dentro de las que son las clases básicas de **A Realm Reborn**.
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/job.jpg" alt="job">
+<br/>
+<sub><sup>Clases del Asistente.</sup></sub></p>
+
+Podrás cambiar la clase del asistente siempre que quieras, teniendo en cuenta que éste pasará a tener nivel 1. 
+
+Cuando el asistente llegue a nivel 30, podrá elegir una profesión, pero esto te pedirá 40 ***Venture***.
+
+<blockquote>
+<b>Una Venture es una moneda que se consigue dentro del juego mediante 200 Sellos de la Gran Compañía. También se pueden conseguir a través de misiones de las Tribus Bestias o completando Guildleves.</b>
+</blockquote>
+
+### Cambiando el equipo de tu asistente
+
+Tras hablar con tu asistente puedes elegir la la opción ***View retainer attributes and gear.*** podrás ponerle equipo que tengas en tu inventario o cofre de equipo y que se ajuste a su nivel y clase o profesión.
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/guiaretainer/equipo.jpg" alt="equipo">
+<sub><sup>Equipo del Asistente.</sup></sub></p>
+
+### Mandarlo de Misiones a nuestro asistente
+
+Cuando nuestro asistente tiene una clase o profesión y el equipo requerido, estará preparado para mandarlo de misiones, las cuales nos pedirán **2 Ventures** cada ves que les enviemos esto lo haremos tras elegir la opción ***Assign venture*** y serán distintas dependiendo la profesión que hayas elegido para tu asistente.
+
+Existen 3 tipos de misiones : 
+
+- **Exploraciones** duran 18 horas y proporcionan mucha experiencia, las usaremos para subir de nivel a nuestros asistentes. Estas misiones a ciertos niveles tiene probabilidad de proporcionar ademas objetos especiales como mascotas de acompañamiento.
+  - *Field Exploration* - Disciplinas de la guerra o de la magia: **Piezas de plata o Bronze** y objetos aleatorios.
+  - *Highland Exploration* - *Minero*: **Piezas de plata o Bronce** y objetos aleatorios de minería.
+  - *Woodland Exploration* - *Botánico*: **Piezas de plata o Bronce** y objetos botánicos aleatorios.
+  - *Waterside Exploration* - *Pescador*: **Piezas de plata o Bronce**  y objetos aleatorios de pesca.
+- **Exploraciones rápidas** duran 1 hora y proporcionan poca experiencia pero traen objetos aleatorios que son mas raros cuanto mas nivel de equipo tiene nuestro asistente:
+  - *Quick Exploration*: Traerán un objeto aleatorio, se desbloquean a nivel 10. 
+- **Misiones de campo** duran 1 hora y nos traerán un material en concreto según el tipo que elijamos, limitado a la clase o profesión de nuestro asistente: 
+  - *Hunting* - Disciplinas de la guerra o de la magia**: Te traerán objetos que se obtienen de enemigos.
+  - *Mining*: Traerán objetos de minería.
+  - *Botany*: Traerán objetos de botánico.
+  - *Fishing*: Traerán objetos de pesca.
