--- a/_posts/2021-07-19-retainer.md
+++ b/_posts/2021-07-19-retainer.md
@@ -2,12 +2,12 @@
 layout: post
 title: "Guía para obtener y gestionar tus Retainers"
 author: sharn
-categories: [  ]
+categories: [ guías ]
 tags: [nuevos jugadores, guías]
 image: assets/images/articles/guias/guiaretainer/portada.jpg
 description: "Como conseguir y gestionar los Retainers"
-featured: false
-hidden: true
+featured: true
+hidden: false
 ---
 Los ***Retainers*** (Asistentes) son unos NPCs que nos darán un **inventario adicional**, equivalente a un **banco** en otros juegos, y que nos servirán para poner objetos en el **tablón del mercado**, la **subasta** en FFXIV. Finalmente los podemos usar para enviarlos a **misiones**, las cuales nos proporcionaran muchos **objetos interesantes**. Hay que indicar que **no** pueden ser utilizados por los jugadores que estén con el ***Free Trial***.
 
