--- a/_posts/2021-07-20-resumen-5-58.md
+++ b/_posts/2021-07-20-resumen-5-58.md
@@ -42,7 +42,7 @@ La cantidad de **experiencia** ganada por los **PNJs** en el **Sistema de Confia
 ### Zonas de Save the Queen
 
 - La cantidad de **Méritos** (*Metle en ingles*) que recibiremos haciendo **Escaramuzas** (*Skirmishes en ingles*) y **Encuentros Críticos** (Critical engagements) en **Bozjan** southern front y **Zadnor** ha sido **aumentadas** entre **rango de resistencia del 1 al 14**.
-- En el **encuentro critico de Serpents' Wings in Zadnor**, el **tiempo de casteo** de la acción en la **ultima fase** ha sido **incrementado** de de 60 to **90 segundos**.
+- En el **encuentro critico de Serpents' Wings in Zadnor**, el **tiempo de casteo** de la acción en la **ultima fase** ha sido **incrementado** de 60 a **90 segundos**.
 
 ### Castrum Lacus Litore
 
@@ -63,7 +63,7 @@ La cantidad de **experiencia** ganada por los **PNJs** en el **Sistema de Confia
  Las **armas** que obtenemos via **tokens de Revellation** podrán ser a**umentadas hasta nivel 530** con las **3 monedas de las incursiones** de esta expansión, para ello:
  
  - Hablar con **Fathard en Eulmore (X:10.1 Y:11.7)** y cambiar ***Manufactured Coin + Puppet's Coin + Breach Coin por un Crypt Ester***.
- - Hablar con **Shee-Tatch in Eulmore (X:10.3 Y:12.0)** y cambiar el **arma de Revellation + Crypt Ester** por una **Augmented Cryptlurker** Weapons.
+ - Hablar con **Shee-Tatch in Eulmore (X:10.3 Y:12.0)** y cambiar el **arma de Revellation + Crypt Ester** por una arma **Augmented Cryptlurker**.
 
  
 ### Jugador contra jugador
