edicion syrcus tower

--- a/_posts/2021-07-22-syrcus.md
+++ b/_posts/2021-07-22-syrcus.md
@@ -1,18 +1,18 @@
 ---
 layout: post
-title:  "Guía de Syrcus tower"
+title:  "Guía de Syrcus Tower"
 author: zex
 categories: [ encuentros ]
 tags: [guía, encuentros]
 image: assets/images/articles/encuentros/crystaltower/crystal_tower.jpg
-description: "Guía de la incursión de alianza de Syrcus tower"
+description: "Guía de la incursión de alianza de Syrcus Tower"
 featured: false
 hidden: false
 ---
-Hoy os traemos una **video guía en Español** de la incursión de alianza de **Syrcus tower**, la cual es **obligatoria** para completar la **Main Scenario Quest** de A Realm Reborn.
+Hoy os traemos una **vídeo guía en Español** de la incursión de alianza de **Syrcus Tower**, la cual es **obligatoria** para completar la ***Main Scenario Quest*** de A Realm Reborn.
 
-Tanto si sois **nuevos jugadores** o queréis **conocer mejor las mecánicas** de esta segunda Alianza esta guía os sera de mucha utilidad para poder completar el contenido como **Campeones de la Luz** que somos.
+Tanto si sois **nuevos jugadores** o queréis **conocer mejor las mecánicas** de esta segunda alianza esta guía os será de mucha utilidad para poder completar el contenido como **Campeones de la Luz** que somos.
 
-No olvidéis de comentar el video y **subscribirse al canal** si os ha gustado.
+No olvidéis de comentar el vídeo y **subscribiros** al <a href="https://www.youtube.com/channel/UC6WMAsnnQXRP5pWG8dWwwnA" target="_blank">canal de Zex Krow</a> si os ha gustado.
 
 {% include youtube.html id='vb69IcZX3-0' %}
