--- a/_posts/2021-07-23-fashion210723.md
+++ b/_posts/2021-07-23-fashion210723.md
@@ -27,7 +27,7 @@ Para hacer los 80 puntos de manera fácil y ganar los 90,000 MGP (o mas si tiene
     - **Craftear** con la receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian que os pedira <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0563231e95a/" class="eorzeadb_link" target="_blank">Grey Pigment</a> los cuales podeis obtener en *Western La Noscea, Quarterstone* siendo Minero 28+ o *South Shroud, Upper Paths* siendo Botanista 28+.
     - Comprar el Tablón del **Mercado** (*Market Board* en Inglés).
 - En **pechera cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/8d5806d8b72/" class="eorzeadb_link" target="_blank">Shadow Blue Dye</a>, que podeis obtener de:
-    - Comprar, si teneis la reputación subida con los **Ixali**, a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/79ffac0a51a/?item=8d5806d8b72&type=currency" class="eorzeadb_link" target="_blank">Sahagin Vendor</a> en **Western La Noscea (X:16.9 Y:22.4)** por 334 gil.
+    - Comprar, si teneis la reputación subida con los **Sahagin**, a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/79ffac0a51a/?item=8d5806d8b72&type=currency" class="eorzeadb_link" target="_blank">Sahagin Vendor</a> en **Western La Noscea (X:16.9 Y:22.4)** por 334 gil.
     - Comprar el Tablón del **Mercado** (*Market Board* en Inglés).    
 - En **pies** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/7b0a7bb79da/" class="eorzeadb_link" target="_blank">Goatskin Leg Guards</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Battle Gear > Purchase Gear (Lv. 20-29)* por 720 gil.
 
