--- a/_posts/2021-07-24-lia_nina.md
+++ b/_posts/2021-07-24-lia_nina.md
@@ -9,7 +9,7 @@ description: "¡Lia nos la lía! 10 preguntas a Nina"
 featured: false
 hidden: true
 ---
-10 preguntas a creadores es una serie de mini entrevistas en las que os iremos presentando un poquillo a varios creadores de contenido de la comunidad, no sólo de twitch o youtube sino de otros ámbitos también.
+*10 preguntas a creadores de contenido es una serie de mini entrevistas en las que os iremos presentando un poquillo a varios creadores de contenido de la comunidad, no sólo de twitch o youtube sino de otros ámbitos también.*
 
 Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tenemos a…. **NinaAriel**!!
 
@@ -29,8 +29,6 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
      <b><i>Lia</i>: ¡Me parece genial! vamos entonces con las 10 preguntas, ¿te parece?</b>
   </div>
 </div>
-
-<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/entrevistas/lia_nina/nina.jpg" alt="Nina"/></p>
 
 <br/>
 
@@ -130,7 +128,6 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
   </div>
 </div>
 
-
 <br/>
 
 <div class="card">
@@ -149,3 +146,7 @@ Muchisimas gracias por hacerme esta entrevista, y por todo lo que os trabajáis 
      <b><i>Lia</i>: ¡El placer ha sido nuestro Nina! ¡Muchísimas gracias por haberte tomado el tiempo de responder nuestras preguntas! No os olvidéis de darle like y suscribiros a su canal y nos vemos en la próxima entrega de Lia nos la lía <3</b>
   </div>
 </div>
+
+<br/>
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/entrevistas/lia_nina/nina.jpg" alt="Nina"/></p>
