publicando lia nina

--- a/_posts/2021-07-24-lia_nina.md
+++ b/_posts/2021-07-24-lia_nina.md
@@ -2,12 +2,12 @@
 layout: post
 title: "¡Lia nos la lía! 10 preguntas a Nina"
 author: lia
-categories: [ ]
+categories: [ entrevistas ]
 tags: [entrevistas, "creadores", "comunidad"]
 image: assets/images/articles/entrevistas/lia_nos_la_lia.jpg
 description: "¡Lia nos la lía! 10 preguntas a Nina"
 featured: false
-hidden: true
+hidden: false
 ---
 *10 preguntas a creadores de contenido es una serie de mini entrevistas en las que os iremos presentando un poquillo a varios creadores de contenido de la comunidad, no sólo de twitch o youtube sino de otros ámbitos también.*
 
