edicion encuesta msq

--- a/_posts/2021-06-29-encuesta.md
+++ b/_posts/2021-06-29-encuesta.md
@@ -5,7 +5,7 @@ author: cecile
 categories: [ encuestas ]
 tags: [encuestas, clases]
 image: assets/images/articles/encuestas/profesiones/xiv.jpg
-description: "Encuesta sobre las profesiones preferidas de Fintal Fantasy XIV."
+description: "Encuesta sobre las profesiones preferidas de Final Fantasy XIV."
 featured: false
 hidden: false
 ---
@@ -14,7 +14,7 @@ Hace unos días planteamos una [encuesta en twitter](https://twitter.com/GacetaE
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-### Tanques.
+### Tanques
 
 <div class="container">
     <div class="row">
@@ -71,7 +71,7 @@ if (grTankes) {
 
 El ***Paladin*** y el ***DarkKnight*** son los tanques preferidos por los jugadores aunque el *Gunbreaker* es un tanque que también gusta, pese a que lleva poco tiempo ya fue introducido en **Shadowbringers**. Finalmente el *Warrior* pese a ser una clase nacida desde el inicio de **Final Fantasy XIV** ha sido la profesión menos votada de toda la encuesta.
 
-### Sanadores.
+### Sanadores
 
 <div class="container">
     <div class="row">
@@ -125,7 +125,7 @@ if (grHeal) {
 
 La mayoría de jugadores ha elegido al versátil ***Astrologian*** como su sanador preferido, pese a ser al más nuevo entre ellos. Hay que destacar que el *White Mage* le sigue de cerca y desafortunadamente el *Scholar* está bastante atrás de los otros dos, cosa que podría cambiar con **Endwalker** con la introduccion del *Sage* y el cambio en el resto de sanadores.
 
-### Combatientes cuerpo a cuerpo.
+### Combatientes cuerpo a cuerpo
 
 <div class="container">
     <div class="row">
@@ -182,7 +182,7 @@ if (gtMelee) {
 
 Para los jugadores, las profesiones favoritas de cuerpo a cuerpo, a partes iguales, son  ***Samurai*** y el ***Dragoon***, dejando en un segundo plano al *Ninja* y al *Monk* pese a que ambos despiertan interés en muchos jugadores. Es curioso que el rediseño del Monk en los últimos parches no le ha traído más seguidores. Veremos como cambiarán estos datos al introducirse una nueva profesion cuerpo a cuerpo en **Endwalker**, el *Reaper*.
 
-### Combatientes físico a distancia.
+### Combatientes físico a distancia
 
 <div class="container">
     <div class="row">
