--- a/_posts/2021-07-27-sus-15.md
+++ b/_posts/2021-07-27-sus-15.md
@@ -12,7 +12,7 @@ hidden: false
 
 *El reino quedó alterado para siempre tras la Calamidad y la devastación que provocó. A lo largo de cinco historias cortas, nuestros personajes principales volverán a visitar los acontecimientos que rodearon ese fatídico día, ofreciendo otro punto de vista de lo que la Calamidad arrebató de sus vidas y de muchos y más.*
 
-<sub><sup>Traducción del relato [original](https://www.finalfantasyxiv.com/anniversary/eu/detail/memoir_4.html?rgn=na&lng=en){:target="_blank"} publicado en la lodestone.</sup></sub>
+<sub><sup>Traducción del relato [original](https://www.finalfantasyxiv.com/anniversary/eu/detail/memoir_4.html?rgn=jp&lng=ja){:target="_blank"} publicado en la lodestone.</sup></sub>
 
 ### Sus 15 años
 
