--- a/_posts/2021-07-24-lia_nina.md
+++ b/_posts/2021-07-24-lia_nina.md
@@ -11,7 +11,7 @@ hidden: false
 ---
 *10 preguntas a creadores de contenido es una serie de mini entrevistas en las que os iremos presentando un poquillo a varios creadores de contenido de la comunidad, no sólo de twitch o youtube sino de otros ámbitos también.*
 
-Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tenemos a…. **NinaAriel**!!
+Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FFXIV tenemos a…. **NinaAriel**!!
 
 <div class="card">
   <div class="card-header">
@@ -67,7 +67,7 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: Tienes algún gazapo o anécdota de novato en ff14 que nos puedas contar? ¿Qué te hubiera gustado saber en aquel momento que sabes ahora?</b>
+     <b><i>Lia</i>: Tienes algún gazapo o anécdota de novato en FFXIV que nos puedas contar? ¿Qué te hubiera gustado saber en aquel momento que sabes ahora?</b>
   </div>
   <div class="card-body">
     <i><b>Nina</b></i>: Pues, no tengo muchas porque desde el principio del juego me han ayudado muchísimo en el stream, la gente es majísima y gracias a la Gaceta he aprendido muchas cosas desde el inicio, una cosa tal vez que no me hubiera gustado descubrir al principio es el Gold saucer, paso mas tiempo alli dentro que leveando xD 
@@ -78,7 +78,7 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¿A qué dedicas la mayor parte de tu tiempo en ff14?</b>
+     <b><i>Lia</i>: ¿A qué dedicas la mayor parte de tu tiempo en FFXIV?</b>
   </div>
   <div class="card-body">
     <i><b>Nina</b></i>: Bueno pues como he dicho en la anterior pregunta, donde paso más tiempo es en el Gold Saucer, que para quien no lo sepa es como un casino/feria que puedes jugar al rasca y gana, la lotería, al Triple triad (juego de cartas del FF8), Mahjong, minijuegos, carreras de chocobo…,etc. Acordaos Gold Saucer, vuestra perdición jaja pero es muy divertido.  
@@ -100,7 +100,7 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¿Qué esperas ver en el futuro en ff14?</b>
+     <b><i>Lia</i>: ¿Qué esperas ver en el futuro en FFXIV?</b>
   </div>
   <div class="card-body">
     <i><b>Nina</b></i>: ¿Qué espero ver? pregunta difícil jeje. Llevo poquito tiempo como he dicho, entonces espero ver la evolución de la historia, las raids… Todavía estoy por Heavensward, me queda mucho por ver y descubrir, y tengo la esperanza de que nos lo traduzcan a español en un futuro ya que actualmente cada vez somos más comunidad hispanohablante (crucemos dedos)    
@@ -111,7 +111,7 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FF14 tene
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¿Desde cuando stremeas ff14 y cuál fue la razón por la que comenzaste a hacerlo?</b>
+     <b><i>Lia</i>: ¿Desde cuando stremeas FFXIV y cuál fue la razón por la que comenzaste a hacerlo?</b>
   </div>
   <div class="card-body">
     <i><b>Nina</b></i>: Empecé a stremear FF14 justo el dia en el que empecé el juego, yo llevo stremeando en twitch desde finales de noviembre de 2020 (como he dicho en una anterior pregunta con WoW) y la razón fue simple, si yo disfruto, la gente disfrutará viéndome, siempre he dicho que me encanta regalar sonrisas y jugar lo que me apeteciera en todo momento.    
