--- a/_posts/2021-08-07-lia_aryn.md
+++ b/_posts/2021-08-07-lia_aryn.md
@@ -158,7 +158,7 @@ Además ,  tengo intención de seguir haciendo videos sobre las diferentes cultu
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¡Muchísimas gracias por haberte tomado el tiempo de responder nuestras preguntas Kai! No os olvidéis de darle like y suscribiros a su canal y nos vemos en la próxima entrega de Lia nos la lía <3</b>
+     <b><i>Lia</i>: ¡Muchísimas gracias por haberte tomado el tiempo de responder nuestras preguntas Aryn! No os olvidéis de darle like y suscribiros a su canal y nos vemos en la próxima entrega de Lia nos la lía <3</b>
   </div>
 </div>
 
