actualizacion lia aebon

--- a/_posts/2021-08-19-lia_aebon.md
+++ b/_posts/2021-08-19-lia_aebon.md
@@ -26,7 +26,7 @@ Y sin más preámbulos hoy en 10 preguntas a creadores de contenido de FFXIV ten
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¡Seguro que si! Vamos entonces con las preguntas, ¿te parece?</b>
+     <b><i>Lia</i>: ¡El placer es mío! vamos entonces con las 10 preguntas, ¿te parece?</b>
   </div>
 </div>
 
