--- a/_posts/2021-09-03-fashion210903.md
+++ b/_posts/2021-09-03-fashion210903.md
@@ -14,7 +14,7 @@ Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"}
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/fashion/fashion210903/freport_188.jpg" alt="Fashion Report 188">
 <br/>
-<sub><sup>Fashion Report 188/sup></sub></p>
+<sub><sup>Fashion Report 188</sup></sub></p>
 
 Para hacer los 80 puntos de manera fácil y ganar los 60,000 MGP:
 
