--- a/_posts/2021-09-14-vinilos.md
+++ b/_posts/2021-09-14-vinilos.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Ya a la venta los Discos de Vinilo de Final Fantasy XIV"
+title:  "Ya se pueden reservar los Discos de Vinilo de Final Fantasy XIV"
 author: sharn
 categories: [ noticias ]
 tags: [vinilos, música]
