--- a/_posts/2021-09-14-vinilos.md
+++ b/_posts/2021-09-14-vinilos.md
@@ -5,7 +5,7 @@ author: sharn
 categories: [ noticias ]
 tags: [vinilos, música]
 image: assets/images/articles/noticias/vinilos/portada.jpg
-description: "Ya a la venta los Discos de Vinilo de Final Fantasy XIV"
+description: "Ya se pueden reservar los Discos de Vinilo de Final Fantasy XIV"
 featured: false
 hidden: false
 ---
