edit description vinilos

--- a/_posts/2021-09-14-vinilos.md
+++ b/_posts/2021-09-14-vinilos.md
@@ -5,11 +5,11 @@ author: sharn
 categories: [ noticias ]
 tags: [vinilos, música]
 image: assets/images/articles/noticias/vinilos/portada.jpg
-description: "Ya se pueden reservar los Discos de Vinilo de Final Fantasy XIV"
+description: "Creados por Bernie Grundman con ilustraciones de Kuroimori"
 featured: false
 hidden: false
 ---
-Ha salido a la venta la **Caja de Vinilos LP** de Final Fantasy XIV donde podrás encontrar toda tu música favorita que te ha acompañado en tus viajes por Eorzea.
+Ya se puede reservar la **Caja de Vinilos LP** de Final Fantasy XIV donde podrás encontrar toda tu música favorita que te ha acompañado en tus viajes por Eorzea.
 
 La **Caja de Vinilos LP** contiene los siguientes discos:
 
