--- a/_posts/2021-09-18-live-letter-66.md
+++ b/_posts/2021-09-18-live-letter-66.md
@@ -253,14 +253,15 @@ Aqui os dejamos el video de las acciones de las profesiones para la 6.0.
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/66/party.jpg" alt="Cambios de party"/></p>
 
-### Removede items HQ
+### Eliminacion de items HQ
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/66/hq.jpg" alt="Cambios de HQ"/></p>
 
 - Se elimina los items HQ de gathering y de drops y vendors.
 - Las habilidades de gathering que incrementa la probabilidad HQ cambiaran el numero de items que dropean.
+- Siguen existiendo los items HQ de equipo y crafteos finales.
 
-### Cambio de precios de teleport
+### Cambio de precios de teleportacion
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/66/teleport.jpg" alt="Cambios de Teleport"/></p>
 
