--- a/_posts/2021-09-22-calamidad-3.md
+++ b/_posts/2021-09-22-calamidad-3.md
@@ -60,7 +60,7 @@ Como líder de Gridania, una nación que se encuentra apenas a un tiro de piedra
 
 Por desgracia, la tarea había resultado imposible para ella. Dalamud había caído, desatando la terrible venganza de Bahamut sobre la tierra, y ahora la Séptima Era Umbral estaba sobre ellos. A pesar de sus esfuerzos, el sueño de esperanza de Eorzea había dado paso a una pesadilla en vida.
 
-Su incertidumbre no se limitaba a los acontecimientos pasados. Al permanecer tanto tiempo en Carteneau, ¿no estaba fallando a su pueblo? ¿No era su lugar con ellos, de vuelta en Gridania? Ellos también estaban sufriendo. En más de una ocasión, resolvió regresar al Bosque de los Doce, para luego reconsiderar su decisión. Sus hermanos y compañeros sembradores, A-Ruhn y Raya-O, se habían quedado a vigilar el bosque, al igual que muchos Oyentes hábiles y compasivos. Debía confiar en ellos. Los que se sacrificaron en el campo de batalla lo hicieron bajo sus órdenes. *“Hasta que no haya hecho todo lo que pueda por ellos, mi lugar está aquí.”*
+Su incertidumbre no se limitaba a los acontecimientos pasados. Al permanecer tanto tiempo en Carteneau, ¿no estaba fallando a su pueblo? ¿No era su lugar con ellos, de vuelta en Gridania? Ellos también estaban sufriendo. En más de una ocasión, resolvió regresar al Bosque de los Doce, para luego reconsiderar su decisión. Sus hermanos y compañeros sembradores, A-Ruhn y Raya-O, se habían quedado a vigilar el bosque, al igual que muchos Oyentes hábiles y compasivos. Debía confiar en ellos. Los que se sacrificaron en el campo de batalla lo hicieron bajo sus órdenes. *Hasta que no haya hecho todo lo que pueda por ellos, mi lugar está aquí.*
 
 Siguió adelante, sin apenas detenerse a comer o dormir. En los rostros de los hombres y mujeres que salvó de la muerte y el sufrimiento, encontró la fuerza para seguir adelante. El sol salía y se ponía, y un día se confundía con el siguiente. Pero hacia el final de la primera semana, los grupos de búsqueda comenzaron a regresar con las manos vacías. Entre los soldados que se habían quedado para ayudar en las tareas de socorro, la moral estaba baja. Habían visto los cadáveres de demasiados compañeros y sus pensamientos se dirigían inevitablemente a los amigos y seres queridos que esperaban su regreso a casa.
 
