--- a/_posts/2021-09-22-calamidad-3.md
+++ b/_posts/2021-09-22-calamidad-3.md
@@ -101,7 +101,7 @@ El erudito Lalafell procedió entonces a explicar que la Senda de los Doce y el 
 
 El reino había perdido a su mayor campeón, y la amenaza que suponían los primigenios, el Imperio Garleano y quién sabía qué más, aún se cernía sobre el horizonte. Y sin embargo, pensó Kan-E mientras miraba a los ojos de los dos sharlayanos, con almas valientes como éstas para defenderla, todavía hay esperanza para Eorzea.
 
-"Sean cuales sean los males a los que nos enfrentemos en los días y años venideros, sabed que Gridania siempre estará con vosotros".
+*"Sean cuales sean los males a los que nos enfrentemos en los días y años venideros, sabed que Gridania siempre estará con vosotros"*.
 
 <p align="center">* * *</p>
 
