--- a/_posts/2021-09-22-calamidad-3.md
+++ b/_posts/2021-09-22-calamidad-3.md
@@ -117,6 +117,6 @@ Kan-E se dio la vuelta y, ante ella, se encontraba un joven hyur con una armadur
 
 Hay pocas heridas que el tiempo no pueda curar. Incluso aquellos que una vez fueron enemigos en el campo de batalla, a través del esfuerzo y la comprensión, pueden un día encontrarse hombro con hombro, el más robusto de los aliados.
 
-Ofreciendo una oración silenciosa al arconte Louisoix y a los amigos que había perdido, Kan-E dirigió sus pensamientos a los amigos que ahora estaban a su lado, y a los compatriotas que acudían a ella en busca de sabiduría y socorro. El verdadero renacimiento de este reino no ha hecho más que empezar.
+Ofreciendo una oración silenciosa al arconte Louisoix y a los amigos que había perdido, Kan-E dirigió sus pensamientos a los amigos que ahora estaban a su lado, y a los compatriotas que acudían a ella en busca de sabiduría y socorro. *El verdadero renacimiento de este reino no ha hecho más que empezar*.
 
-Mientras la cálida luz del sol se colaba entre las hojas y caía sobre el camino que tenía ante sí, Kan-E-Senna avanzó con decisión. Los mayores desafíos aún están por delante, pero nos levantaremos para enfrentarnos a ellos, juntos, como uno solo.
+Mientras la cálida luz del sol se colaba entre las hojas y caía sobre el camino que tenía ante sí, Kan-E-Senna avanzó con decisión. *Los mayores desafíos aún están por delante, pero nos levantaremos para enfrentarnos a ellos, juntos, como uno solo*.
