--- a/_posts/2021-09-25-juglar-11.md
+++ b/_posts/2021-09-25-juglar-11.md
@@ -13,6 +13,6 @@ En nuestras aventuras en Eorzea conocemos al Juglar Errante, el cual se encarga 
 
 En gaceta Eorzea hemos decidido tener nuestro propio Juglar el cual compartirá con nosotros las historias que nuestros aventureros han compartido.
 
-Esta semana el Juglar Errante nos trae el video */emote* que es un precioso video de una lalafell que solo puede expresarse por emote. Esta creacion ha sido ralizada por [zaneko](https://twitter.com/zanekonpu){:target="_blank"}, que tambien tiene un maravilloso [canal de YouTube](https://www.youtube.com/c/ZANEKONPU/videos){:target="_blank"} con mas video como este.
+Esta semana el Juglar Errante nos trae el video */emote* que es un precioso video de una lalafell que solo puede expresarse por emote. Esta creacion ha sido ralizada por [zaneko](https://twitter.com/zanekonpu){:target="_blank"}, que tambien tiene un maravilloso [canal de YouTube](https://www.youtube.com/c/ZANEKONPU/videos){:target="_blank"} con mas videos como este.
 
 {% include youtube.html id='4ukVbacUlxY' %}
