--- a/_posts/2021-09-18-live-letter-66.md
+++ b/_posts/2021-09-18-live-letter-66.md
@@ -6,7 +6,7 @@ categories: [ gold saucer ]
 tags: [gold saucer, eventos, semanales]
 image: assets/images/articles/noticias/live-letter/66/portada.jpg
 description: "Resumen de la Carta del Productor en vivo numero 66."
-featured: true
+featured: false
 hidden: false
 ---
 
