--- a/_posts/2021-10-22-calamidad-5.md
+++ b/_posts/2021-10-22-calamidad-5.md
@@ -16,7 +16,7 @@ hidden: false
 
 ### La Gloria de la Victoria
 
-*- ¡Cancelen las órdenes anteriores! ¡Todas las unidades del Maelstrom tienen la orden de retirarse, con efecto inmediato!*
+*- ¡Cancelad las órdenes anteriores! ¡Todas las unidades del Maelstrom tienen la orden de retirarse, con efecto inmediato!*
 
 Fue una decisión difícil.<br/>
 Merlwyb Bloefhiswyn, la almirante que dirige la Gran Compañía del Maelstrom de la ciudad-estado Limsa Lominsa había decidido retirarse de las Llanuras de Carteneau.<br/>
