--- a/_posts/2021-11-06-live-letter-67.md
+++ b/_posts/2021-11-06-live-letter-67.md
@@ -18,13 +18,13 @@ En este artículo os haremos un **resumen** de las principales novedades haciend
 
 En el inicio del evento Yoshi-P, el cual se le vió pasarlo bastante afectado por la situación, nos comunicó que lamentablemente **la salida de Endwalker ha sido retrasada 2 semanas**. El motivo principal es que habia ciertos elementos que no tenian la calidad que el productor del juego queria para la salida de esta ultima entrega de la historia, asi que tras realizar los cambios tiene que pasar el proceso de control de calidad antes de la salida del juego.
 
-Podeis ver mas detalles de esta información en el [articulo que han publicado en la lodestone](https://eu.finalfantasyxiv.com/lodestone/topics/detail/543305a31fe801d5df3a29ef2cea581e00b46761){:target="_blank"} .
+Podeis ver mas detalles de esta información en el [articulo que han publicado en la lodestone](https://eu.finalfantasyxiv.com/lodestone/topics/detail/543305a31fe801d5df3a29ef2cea581e00b46761){:target="_blank"}.
 
 #### Nuevo trailer de Historia
 
-Pudimos disfrutar de un nuevo trailer de historia:
+Pudimos disfrutar de un nuevo trailer de historia, os lo traemos subtitulo por [@Lia_Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"}:
 
-{% include youtube.html id='31FTL2Ua5Ns' %}
+{% include youtube.html id='mobo-dXsFQM' %}
 
 <br/>
 
