--- a/_posts/2021-11-05-fashion211105.md
+++ b/_posts/2021-11-05-fashion211105.md
@@ -16,12 +16,16 @@ Una semana mas [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_blank"}
 <br/>
 <sub><sup>Fashion Report 197</sup></sub></p>
 
-Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
+Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP** tenemos dos combinaciones posibles :
 
+**Primera Combinación**
 
 - En **cabeza cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/ee77bb48be9/" class="eorzeadb_link" target="_blank">Rose Pink Dye</a> el cual se lo podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=ee77bb48be9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)**  por 40 gil.
 - En **pecho** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/6f802424ff8" class="eorzeadb_link" target="_blank">Archaeoskin Jackcoat of Crafting</a> la cual se la podeis podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/2e8a654c48a/?item=6f802424ff8&type=gil" class="eorzeadb_link" target="_blank">Norlaise</a> en **The Pillars (X:7.1 Y:10.1)**  por 10038 gil en la cetegoria **Purchase Disciple of the Hand/Land Gear**, o **craftear con una receta de Leatherworker nivel 52**.
 - En **guantes cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/ee77bb48be9/" class="eorzeadb_link" target="_blank">Rose Pink Dye</a> el cual se lo podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=ee77bb48be9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)**  por 40 gil.
 - En **pantalones cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/a17514d0143/" class="eorzeadb_link" target="_blank">Deepwood Green Dye</a> el cual es **receta nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist y Cullinarian** o lo podes comprar en el market board.
+
+**Segunda Combinación**
+
 - En **cabeza** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/e3b70063ddd" class="eorzeadb_link" target="_blank"> Flat Cap</a> el cual podeis craftear con **Weaver 45**, o comprar en le Marketboard, **teñido** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/ee77bb48be9/" class="eorzeadb_link" target="_blank">Rose Pink Dye</a> el cual se lo podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=ee77bb48be9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)**  por 40 gil.
 - En **manos cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/ee77bb48be9/" class="eorzeadb_link" target="_blank">Rose Pink Dye</a> el cual se lo podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=ee77bb48be9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)**  por 40 gil.
