--- a/_posts/2021-12-18-el-ocular-01.md
+++ b/_posts/2021-12-18-el-ocular-01.md
@@ -7,7 +7,7 @@ tags: [ocular, podcast]
 image: assets/images/articles/podcast/ocular_01.jpg
 description: "El Ocular Podcast: Aflojando Cinturones | Repaso pre-expansión"
 featured: false
-hidden: false
+hidden: true
 ---
 
 El pasado 25 de Noviembre, unos pocos dias antes del acceso anticipado de Endwalker tuvimos la primera entrega del Podcast de  [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Habeces](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"} y la colaboración de [Cecile](https://twitter.com/JuanMedinaCode){:target="_blank"}.
