cambio de habeces por Noah

--- a/_posts/2021-12-18-el-ocular-01.md
+++ b/_posts/2021-12-18-el-ocular-01.md
@@ -10,7 +10,7 @@ featured: false
 hidden: true
 ---
 
-El pasado 25 de Noviembre, unos pocos dias antes del acceso anticipado de Endwalker tuvimos la primera entrega del Podcast de  [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Habeces](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"} y la colaboración de [Cecile](https://twitter.com/JuanMedinaCode){:target="_blank"}.
+El pasado 25 de Noviembre, unos pocos dias antes del acceso anticipado de Endwalker tuvimos la primera entrega del Podcast de  [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"} y la colaboración de [Cecile](https://twitter.com/JuanMedinaCode){:target="_blank"}.
 
 En esta ocasión el Podcast se centró en hacer un repaso a la información de ultima hora antes de Endwalker y de consejos a tener en cuenta en el lanzamiento. Podeis ver el Podcast a completo en el video a continuación.
 
