--- a/_posts/2021-12-21-resumen-6-01.md
+++ b/_posts/2021-12-21-resumen-6-01.md
@@ -93,6 +93,8 @@ Como es habitual los **encuentros** de esta raid **dan tokens** los cuales se pu
   </div>            
 </div>
 
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/parche6_01/pan_aspho_loot.jpg" alt="Pandæmonium: Asphodelos Loot"/></p>
+
 <br/>
 
 Solo podemos obtener **un token por boss a la semana** y el **reseteo** como siempre seran los **Martes** a las **9:00 a.m**.
