peque correciones del 6.05

--- a/_posts/2022-01-04-resumen-6-05.md
+++ b/_posts/2022-01-04-resumen-6-05.md
@@ -77,7 +77,7 @@ Para **desbloquear este modo** debemos hablar con **Nemjiji** en **Labyrinthos (
 
 Al **completar cualquiera de los duties en savage** tendremos disponibles en el **loot** **cofres de Asphodelos** que se **transformaran en el equipo o armas correspondientes**. 
 
-Si tu **grupo contiene jugadores** que ya han **completado ese circulo esa semana** el numero de cofres que **aparecerá se reducirá**, de la misma forma **no podrán obtener objetos si ya lo han completado esa semana**.
+Si tu **grupo contiene jugadores** que ya han **completado ese circulo esa semana** el numero de cofres que **aparecerá se reducirá**, de la misma forma **no podrán obtener objetos si ya lo han completado esa semana, aunque no hayan loteado nada**. Si vas **con 1 a 4 jugadores que ya la completado** solo habrá **un cofre**, si van **5 o mas no habrá cofre ninguno** y como hemos dicho **una vez completado no podrás lotear esa semana**.
 
 **Adicionalmente obtendremos Asphodelos Mythos** que podremos **cambiar** por distintas **piezas** de savage.
 
