--- a/_posts/2022-01-14-expa-serv.md
+++ b/_posts/2022-01-14-expa-serv.md
@@ -39,7 +39,7 @@ Estos cambios serán aplicado aproximadamente en Julio del 2022.
 
 #### Apertura del Data Center Oceánico
 
-El **nuevo Data center en Oceania** abrirá el proximo **Martes 25 de 2021**, el cual contará de **5 servidores**. Contará con **beneficios** propios, como experiencia doble hasta nivel, para incentivar su uso incluido la **transferencia gratuita**.
+El **nuevo Data center en Oceania** abrirá el proximo **Martes 25 de Enero de 2021**, el cual contará de **5 servidores**. Contará con **beneficios** propios, como experiencia doble hasta nivel 80, para incentivar su uso incluido la **transferencia gratuita**.
 
 #### Servicio de Transferencia de mundos
 
