--- a/_posts/2022-01-13-all-saints-2022.md
+++ b/_posts/2022-01-13-all-saints-2022.md
@@ -26,3 +26,12 @@ Tras **completar las misiones** de evento obtendremos **nuevas recompensas**:
     <br/>
     En este caso tendremos un <b>disfraz de payaso</b>, incluido una nueva <b>Face Paint</b> (usable en la personalización de personaje) y <b>adornos</b> para el <b>housing</b>.
 </p>
+
+
+<blockquote >
+Se ha <b>confirmado</b> hoy 17 de Enero que <b>tendremos</b> evento de la <b>Mansion Encantada</b>, como otros años podremos <b>entrar desde Mih Khetto's Amphitheatre</b> en Gridania.<br/>
+<br/>
+Podremos ir a la <b>habitación #108</b> donde podremos <b>transformarnos</b> en distintos <b>personajes</b> de la historia y hacernos <b>gpose</b>, los que hay <b>disponibles han cambiado</b> durante las veces que este evento ha estado disponible.
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/all-saints-2022/gpose.jpg" alt="NPC Pose"/></p>
+
+</blockquote >
