--- a/_posts/2022-01-13-all-saints-2022.md
+++ b/_posts/2022-01-13-all-saints-2022.md
@@ -27,11 +27,19 @@ Tras **completar las misiones** de evento obtendremos **nuevas recompensas**:
     En este caso tendremos un <b>disfraz de payaso</b>, incluido una nueva <b>Face Paint</b> (usable en la personalización de personaje) y <b>adornos</b> para el <b>housing</b>.
 </p>
 
+<blockquote >
+El evento tiene una dungeon llamado <b>Phamtom's Feast</b> que se hace con habilidades especiales y <b>4 jugadores</b> que nos da <b>6 Pumking Cookies</b> cada vez que la hagamos, necesitamos <b>12 para el traje completo</b>.<br/>
+<br/>
+Lo haremos una vez en las misiones de historia pero podemos <b>repetir</b> hablando <b>Harlequin Guide</b> en <b>Mih Khetto's Amphitheatre</b> en <b>Old Gridania</b>.
+</blockquote >
+
 
 <blockquote >
-Se ha <b>confirmado</b> hoy 17 de Enero que <b>tendremos</b> evento de la <b>Mansion Encantada</b>, como otros años podremos <b>entrar desde Mih Khetto's Amphitheatre</b> en Gridania.<br/>
+<b>Tenemos</b> tambén el evento de la <b>Mansion Encantada</b>, como otros años podremos <b>entrar</b> hablando <b>Genial Guiser</b> en <b>Mih Khetto's Amphitheatre</b> en <b>Old Gridania</b>.<br/>
 <br/>
-Podremos ir a la <b>habitación #108</b> donde podremos <b>transformarnos</b> en distintos <b>personajes</b> de la historia y hacernos <b>gpose</b>, los que hay <b>disponibles han cambiado</b> durante las veces que este evento ha estado disponible.
+Podremos ir a la <b>habitación #108</b> donde podremos <b>transformarnos</b> en distintos <b>personajes</b> de la historia y hacernos <b>gpose</b>, en esta ocasión incluyen personajes de <b>Shadowbringers</b>.
+
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/noticias/all-saints-2022/gpose.jpg" alt="NPC Pose"/></p>
+
 
 </blockquote >
