--- a/_posts/2022-01-21-sombras-1.md
+++ b/_posts/2022-01-21-sombras-1.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Relatos desde las sombras : A través de sus ojos"
+title: "Relatos desde las Sombras : A través de sus ojos"
 author: lia
 categories: [ relatos ]
 tags: [lore, relatos]
 image: assets/images/articles/relatos/sombras-1/portada.jpg
-description: "Traducción al castellano de los relatos del lodestone, Relatos desde las sombras : A través de sus ojos"
+description: "Traducción al castellano de los relatos del lodestone, Relatos desde las Sombras : A través de sus ojos"
 featured: false
 hidden: false
 ---
